# RPRZ

./: .gitignore  README.md  bot.py  bot_data.pkl  coverage_report.md  main.py  pyproject.toml  requirements.txt  test_bot.py
tests/: test_bot.py
