[project]
name = "telebotnews"
version = "0.1.0"
description = ""
authors = [
    {name = "Dockzadrot",email = "126706920+Dockzadrot@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["test_bot.py"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["main.py"]
omit = ["test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "pass",
    "raise NotImplementedError"
]
fail_under = 75
